# blog-app-dioxus

./: .gitignore  Cargo.toml  README.md
assets/: main.css
src/: main.rs
