[package]
name = "blog"
version = "0.1.0"
authors = ["Shreyas Kotian <shreyaskotian09@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
serde = "1.0.219"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
